# books-tools

./: .clang-format  .gitmodules  CMakeList.txt  CMakeLists.txt  CmakeLists.txt  README.md  build.bat  build.sh  clang-format.bat  configure.bat  solution_generate.bat
src/home/lib/: ImageItem.cpp  ImageItem.h  UniqueFile.cpp  UniqueFile.h  archive.cpp  archive.h  book.cpp  book.h  canny.cpp  canny.h  flihash.cpp  flihash.h  hash.h  hashfb2.cpp  hashfb2.h  hashxml.cpp  hashxml.h  lib.cmake  util.cpp  util.h
src/home/lib/dump/: Factory.cpp  Factory.h  Flibusta.cpp  IDump.h  LibRusEc.cpp
src/home/resources/locales/: CMakeLists.txt  en.ts  ru.ts  uk.ts
src/home/script/conan/: conanfile.py
src/home/tool/: tool.cmake
src/home/tool/convert/: convert.cmake  convert.cpp
src/home/tool/fb2cut/: EpubParser.cpp  Fb2Parser.cpp  Fb2Parser.h  IParser.cpp  IParser.h  ParserFactory.cpp  fb2cut.cmake  main.cpp  settings.h
src/home/tool/flicmp/: flicmp.cmake  flicmp.cpp
src/home/tool/flidumper/: flidumper.cmake  flidumper.cpp
src/home/tool/flifaqer/: AppConstant.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  TextViewWidget.cpp  TextViewWidget.h  TextViewWidget.ui  TranslationWidget.cpp  TranslationWidget.h  TranslationWidget.ui  constant.h  di_app.cpp  di_app.h  flifaqer.cmake  flifaqer.cpp  model.cpp  model.h  role.h
src/home/tool/flifaqer/resources/: app.qrc  flifaqer.qrc
src/home/tool/flihasher/: canny.cpp  canny.h  flihasher.cmake  flihasher.cpp
src/home/tool/flimager/: flimager.cmake  flimager.cpp  main.cpp
src/home/tool/flimerger/: flimerger.cmake  flimerger.cpp  main.cpp
src/home/tool/fliparser/: book.cpp  book.h  fliparser.cmake  fliparser.cpp  main.cpp  settings.cpp  settings.h  util.cpp  util.h
src/home/tool/fliparser/db/: Factory.cpp  Factory.h  Flibusta.cpp  IDatabase.h  RusEc.cpp
src/home/tool/fliparser/resources/data/: unindexed.json
src/home/tool/fliscaner/: fliscaner.cmake  fliscaner.cpp  main.cpp
src/home/tool/flistat/: flistat.cmake  flistat.cpp
